WIP add columns
co-authored-by: Ashe Urban <ashe@goldentongue.com

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -7,16 +7,28 @@
   <body>
     <h1>Epicodus Animal Shelter</h1>
     <h2>Welcome to the Epicodus Animal Shelter! Click the links below to learn more about our adoptable pets!</h2>
-    <p>Adoptable Pets</p>
-    <ul>
-      <img src="img/chinchilla-photo.jpg" alt="Women holding Chinchilla in hand">
-      <li>Craig the Chinchilla</li>
-      <img src="img/golden-retriever.jpg" alt="Golden Retriever with flower in mouth">
-      <li>Theodore the Golden Retriever</li>
-      <img src="img/rabbit-photo.jpg" alt="Rabbit in the grass">
-      <li>Scuttles the Rabbit</li>
-      <img src="img/parrot-photo.jpg" alt="Parrot sitting on perch">
-      <li>Polly the Parrot</li>
-    </ul>
+    <h3>Adoptable Pets</h3>
+      <ul>
+        <div class="column">
+        <img src="img/chinchilla-photo.jpg" alt="Women holding Chinchilla in hand">
+          <li>Craig the Chinchilla</li>
+          <p>Craig a 6 year old Chinchilla male weighing 3lbs. He loves to cuddle in the palm of your hand and take sand baths!</p>
+        </div>
+        <div class="column">
+          <img src="img/golden-retriever.jpg" alt="Golden Retriever with flower in mouth">
+          <li>Theodore the Golden Retriever</li>
+          <p>Theo, as he likes to be called, is a one and half year old Golden Retriever mix. He loves gardening and snuggles.</p>
+        </div>
+        <div class="column">
+          <img src="img/rabbit-photo.jpg" alt="Rabbit in the grass">
+          <li>Scuttles the Rabbit</li>
+          <p>Scuttles is a 2 year old male rabbit weighing 4 lbs. He loves to explore grassy areas and munch on veggies!</p>
+        </div>
+        <div class="column">
+          <img src="img/parrot-photo.jpg" alt="Parrot sitting on perch">
+          <li>Polly the Parrot</li>
+          <p>Polly, which classic in name, is anything but. Sassy, funky, fun: this lady loves to get her groove on. You might say, she's an ecellent "wingman".</p>
+        </div> 
+      </ul>
   </body>
 </html>
