ADD styling to column and h1 and h2
co-authored-by: Ashe Urban <ashe@goldnetongue.com

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -5,9 +5,12 @@
     <title>Animal Shelter Website</title>
   </head>
   <body>
-    <h1>Epicodus Animal Shelter</h1>
-    <h2>Welcome to the Epicodus Animal Shelter! Click the links below to learn more about our adoptable pets!</h2>
-    <h3>Adoptable Pets</h3>
+    <div class="center">
+      <h1>Epicodus Animal Shelter</h1>
+      <h2>Welcome to the Epicodus Animal Shelter! Click the links below to learn more about our adoptable pets!</h2>
+      <div class="important">
+        <h1>Adoptable Pets</h1></div>
+    </div>
       <ul>
         <div class="column">
         <img src="img/chinchilla-photo.jpg" alt="Women holding Chinchilla in hand">
