--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -5,34 +5,35 @@
     <title>Animal Shelter Website</title>
   </head>
   <body>
-      <h1>Epicodus Animal Shelter</h1>
-      <h2>Welcome to the Epicodus Animal Shelter! Click the links below to learn more about our adoptable pets!</h2>
-      <div class="important">
-        <h1>Adoptable Pets</h1>
-      </div>
-      <ul>
-        <div class="my-class">
-        <div class="column">
+    <h1>Epicodus Animal Shelter</h1>
+    <h2>Welcome to the Epicodus Animal Shelter! Click the links below to learn more about our adoptable pets!</h2>
+    <div class="important">
+      <h1>Adoptable Pets</h1>
+    </div>
+    <div class="main">
+      <div class="column">
         <img src="img/chinchilla-photo.jpg" alt="Women holding Chinchilla in hand">
-          <li>Craig the Chinchilla</li>
-          <p>Craig a 6 year old Chinchilla male weighing 3lbs. He loves to cuddle in the palm of your hand and take sand baths!</p>
-          </div>
-          <div class="column">
-            <img src="img/golden-retriever.jpg" alt="Golden Retriever with flower in mouth">
-            <li>Theodore the Golden Retriever</li>
-            <p>Theo, as he likes to be called, is a one and half year old Golden Retriever mix. He loves gardening and snuggles.</p>
-          </div>
-          <div class="column">
-            <img src="img/rabbit-photo.jpg" alt="Rabbit in the grass">
-            <li>Scuttles the Rabbit</li>
-            <p>Scuttles is a 2 year old male rabbit weighing 4 lbs. He loves to explore grassy areas and munch on veggies!</p>
-          </div>
-          <div class="column">
-          <img src="img/parrot-photo.jpg" alt="Parrot sitting on perch">
-          <li>Polly the Parrot</li>
-          <p>Polly, which classic in name, is anything but. Sassy, funky, fun: this lady loves to get her groove on. You might say, she's an ecellent "wingman".</p>
-        </div>
-        </div>
-      </ul>
+        <h2>Craig</h2>
+        <p>Craig a 6 year old Chinchilla male weighing 3lbs. He loves to cuddle in the palm of your hand and take sand baths!
+        </p>
+      </div>
+      <div class="column">
+        <img src="img/golden-retriever.jpg" alt="Golden Retriever with flower in mouth">
+        <h2>Theodore "Theo"</h2>
+        <p>Theo, as he likes to be called, is a one and half year old Golden Retriever mix. He loves gardening and snuggles.
+        </p>
+      </div>
+      <div class="column">
+        <img src="img/rabbit-photo.jpg" alt="Rabbit in the grass">
+        <h2>Scuttles</h2>
+        <p>Scuttles is a 2 year old male rabbit weighing 4 lbs. He loves to explore grassy areas and munch on veggies!
+        </p>
+      </div>
+      <div class="column">
+        <img src="img/parrot-photo.jpg" alt="Parrot sitting on perch">
+        <h2>Polly</h2>
+        <p>Polly, which classic in name, is anything but. Sassy, funky, fun: this lady loves to get her groove on.</p>
+      </div>
+    </div>
   </body>
 </html>
